maybe final fix
I'm truly hating how safari on apple devices is the only place where the background looks strange

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 html body{
   margin: 0;
   padding: 0;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   background-size: auto;
   background-repeat: no-repeat;
   background: url(images/waterline.png);
+  background-color: black;
 }
 .box{
   width: 450px;
